--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dependencies": {
         "@casl/ability": "^6.5.0",
         "@casl/vue": "^2.2.1",
+        "@vueup/vue-quill": "^1.2.0",
         "dayjs": "^1.11.10",
         "js-cookie": "^3.0.5",
         "laravel-vue-pagination": "^4.1.1",
@@ -31,6 +32,7 @@
         "vue-router": "^4.2.5",
         "vue-select": "^4.0.0-beta.6",
         "vue-sweetalert2": "^5.0.5",
+        "vue3-easy-data-table": "^1.5.47",
         "vuex": "^4.1.0",
         "vuex-persistedstate": "^4.1.0"
     }
