--- a/package.json
+++ b/package.json
@@ -16,23 +16,25 @@
         "laravel-vite-plugin": "^0.8.1",
         "lodash": "^4.17.21",
         "postcss": "^8.4.31",
-        "sass": "^1.68.0",
+        "sass": "^1.69.0",
         "vite": "^4.4.11",
         "vue": "^3.3.4"
     },
     "dependencies": {
         "@casl/ability": "^6.5.0",
         "@casl/vue": "^2.2.1",
+        "@fortawesome/fontawesome-free": "^6.4.2",
         "@vueup/vue-quill": "^1.2.0",
+        "ag-grid-community": "^30.2.0",
+        "ag-grid-vue3": "^30.2.0",
         "dayjs": "^1.11.10",
         "js-cookie": "^3.0.5",
         "laravel-vue-pagination": "^4.1.1",
-        "vee-validate": "^4.11.7",
+        "vee-validate": "^4.11.8",
         "vue-i18n": "^9.5.0",
         "vue-router": "^4.2.5",
         "vue-select": "^4.0.0-beta.6",
         "vue-sweetalert2": "^5.0.5",
-        "vue3-easy-data-table": "^1.5.47",
         "vuex": "^4.1.0",
         "vuex-persistedstate": "^4.1.0"
     }
