--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "laravel/laravel",
     "type": "project",
-    "description": "A Laravel Vue SPA starter project",
+    "description": "Unreal Code Kits",
     "keywords": ["spa", "laravel", "vue"],
     "license": "MIT",
     "require": {
@@ -65,5 +65,11 @@
         }
     },
     "minimum-stability": "stable",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "author": "",
+    "createAt": "",
+    "homepage": "",
+    "identifier": "",
+    "meta": {},
+    "schemaVersion": 0
 }
