--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "js-cookie": "^3.0.5",
         "laravel-vue-pagination": "^4.1.1",
         "vee-validate": "^4.11.8",
+        "vite-plugin-commonjs": "^0.10.0",
         "vue-i18n": "^9.5.0",
         "vue-router": "^4.2.5",
         "vue-select": "^4.0.0-beta.6",
