--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "vue-i18n": "^9.5.0",
         "vue-router": "^4.2.5",
         "vue-select": "^4.0.0-beta.6",
+        "vue-star-rating": "^2.1.0",
         "vue-sweetalert2": "^5.0.5",
         "vuex": "^4.1.0",
         "vuex-persistedstate": "^4.1.0"
